# YTBN-Graphing-Software

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  build.sh  flake.nix  pack_assets.sh  push.sh  shell.nix  start-server.sh
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: fonts.tar  text.json  text.json5  text_help_expr.txt  text_help_function.txt  text_help_other.txt  text_help_panel.txt  text_help_vars.txt
benchmarks/: Cargo.toml
benchmarks/benches/: split_function.rs
benchmarks/src/: lib.rs
parsing/: Cargo.toml  build.rs
parsing/src/: autocomplete.rs  autocomplete_hashmap.rs  autocomplete_helper.rs  lib.rs  parsing.rs  splitting.rs  suggestions.rs
src/: autocomplete_helper.rs  chart_manager.rs  consts.rs  data.rs  egui_app.rs  func_plot.rs  function.rs  function_entry.rs  function_manager.rs  function_output.rs  hashmap_helper.rs  lib.rs  main.rs  math_app.rs  misc.rs  parsing.rs  style.rs  suggestions.rs  unicode_helper.rs  widgets.rs
src/function_handling/: mod.rs  parsing.rs  suggestions.rs
tests/: autocomplete.rs  function.rs  misc.rs  parsing.rs
www/: bootstrap.js  index.html  index.js  manifest.json  package.json  style.css  style.css.new  sw.js
