[package]
name = "ytbn_graphing_software"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/Titaniumtown/YTBN-Graphing-Software"
description = "Crossplatform (and web-compatible) graphing calculator"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
threading = ["async-lock", "rayon"]

[profile.release]
debug = false
codegen-units = 1
opt-level = "z"   #optimize for size
lto = "fat"
strip = true
panic = "abort"

[profile.dev]
debug = true
codegen-units = 8
opt-level = 0
lto = false
strip = false

[profile.bench]
debug = true
codegen-units = 1
opt-level = 3
lto = "thin"
strip = false

[dependencies]
parsing = { path = "./parsing" }
eframe = { git = "https://github.com/Titaniumtown/egui.git", default-features = false, features = [
    "glow",
] }
egui = { git = "https://github.com/Titaniumtown/egui.git", default-features = false, features = [
    "serde",
] }
epaint = { git = "https://github.com/Titaniumtown/egui.git", default-features = false }
emath = { git = "https://github.com/Titaniumtown/egui.git", default-features = false }

shadow-rs = { version = "0.11", default-features = false }
const_format = { version = "0.2", default-features = false, features = ["fmt"] }
cfg-if = "1"
lazy_static = "1"
ruzstd = { git = "https://github.com/Titaniumtown/zstd-rs.git", branch = "ringbuffer" }
tracing = "0.1"
itertools = "0.10"
static_assertions = "1.1"
bincode = "1.3"
serde = "1"

[dev-dependencies]
benchmarks = { path = "./benchmarks" }

[build-dependencies]
shadow-rs = "0.11"
epaint = { git = "https://github.com/Titaniumtown/egui.git", default-features = false, features = [
    "serde",
] }
egui = { git = "https://github.com/Titaniumtown/egui.git", default-features = false, features = [
    "serde",
] }
bincode = "1.3"
serde = "1"
serde_json = "1"
zstd = "0.11"
run_script = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant = "0.1"
tracing-subscriber = "0.3"
rayon = { version = "1.5", optional = true }
async-lock = { version = "2.5", optional = true }
getrandom = { version = "0.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
wee_alloc = "0.4"
wasm-bindgen = { version = "0.2", default-features = false, features = ["std"] }
web-sys = "0.3"
tracing-wasm = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true #don't test optional dependencies, only features
