[package]
name = "parsing"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "AGPL-3.0"
repository = "https://github.com/Titaniumtown/YTBN-Graphing-Software/tree/main/parsing"
description = "Parsing library for YTBN-Graphing-Software"

[lib]

[dependencies]
phf = { version = "0.10", no-default-features = true }
exmex = { git = "https://github.com/bertiqwerty/exmex.git", branch = "main", features = [
    "partial",
] }
lazy_static = "1.4"

[build-dependencies]
phf_codegen = { version = "0.10", no-default-features = true }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true #don't test optional dependencies, only features
