[package]
name = "parsing"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "AGPL-3.0"
repository = "https://github.com/Titaniumtown/YTBN-Graphing-Software/tree/main/parsing"
description = "Parsing library for YTBN-Graphing-Software"

[lib]

[dependencies]
phf = { version = "0.11" }
exmex = {version = "0.17.5", features = ["partial"]}

[build-dependencies]
phf_codegen = { version = "0.11" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true #don't test optional dependencies, only features
